[metadata]
name = geomapi-generationtools
version = 0.0.1 #0.0.1
author = Jelle Vermandere
description = Tools to generate complete objects and scenes from partially captured data
long_description = file: README.md
long_description_content_type = text/markdown
url = #url
License = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9 # list the compatible python versions
install_requires = numpy
    mesh2sdf
    trimesh
    open3d
    matplotlib
    torch
    torchvision
    pillow
    scipy